XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* Improvement: debugger variable view displays the number of lines and the number
  of characters for python strings and QStrings. Unnecessary '.' in the QString
  variable name is stripped.

2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.0
* Improvement: scaling of diagram and pictures is now via Ctrl + Mouse wheel
* Improvement: scaling text editor fonts via Ctrl + Mouse wheel
* Project tab is activated automatically when a project is loaded from the
  recent projects tab
* Reset pyflakes labels when a file changed its type due to 'save as' action
* New feature: SVN plugin
* Do not show improper calltips provided by the rope library
* Bug fix: find in files crash if the found line is the last one
* New feature: Ctrl+Shift+T/M/B to move the text cursor to the first visible
  line/to the line in the middle of the visible text/to the last visible line
* Minor improvements and bug fixes


2013 Aug 23 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.1.1
* Fix: completion did not offer anything for relative imports. Issue #402.

2013 Aug 12 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.1.0
* Better calltips for PyQt objects.
* About dialog added.
* Ctrl+Shift+F1 added for the current call help.
* Better handling of the outline window redrawing - no redraw if syntax is broken.
* Better jumps from the outline window. Last good and the current parsed
  info are taken into account.
* Better undo of the automatically trimmed empty opened lines.
* Search indicators are now configurable (per skin).
* Make Ctrl+PgUp going to the previous tab while Ctrl+PgDwn to the next one.
* New feature: ui configurable monospaced font.
* Fix: opening another user (read only) project now works.
* New feature: plugin interface.
* New feature: garbage collector plugin.
* Bug fix: pyflakes analysis crashed if there was an invalid escape character
  or null characters in the buffer (Issue #399)